; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/comedi/drivers/tests/extr_ni_routes_test.c_test_ni_get_valid_routes.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/comedi/drivers/tests/extr_ni_routes_test.c_test_ni_get_valid_routes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { %struct.ni_route_tables }
%struct.ni_route_tables = type { i32 }

@private = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@.str = private unnamed_addr constant [52 x i8] c"count all valid routes through ni_get_valid_routes\0A\00", align 1
@.str.1 = private unnamed_addr constant [51 x i8] c"copied first valid route from ni_get_valid_routes\0A\00", align 1
@.str.2 = private unnamed_addr constant [53 x i8] c"source of first valid pair from ni_get_valid_routes\0A\00", align 1
@.str.3 = private unnamed_addr constant [58 x i8] c"destination of first valid pair from ni_get_valid_routes\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_ni_get_valid_routes() #0 {
  %1 = alloca %struct.ni_route_tables*, align 8
  %2 = alloca [2 x i32], align 4
  store %struct.ni_route_tables* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @private, i32 0, i32 0), %struct.ni_route_tables** %1, align 8
  %3 = call i32 (...) @init_pci_fake()
  %4 = load %struct.ni_route_tables*, %struct.ni_route_tables** %1, align 8
  %5 = call i32 @ni_get_valid_routes(%struct.ni_route_tables* %4, i32 0, i32* null)
  %6 = icmp eq i32 %5, 57
  %7 = zext i1 %6 to i32
  %8 = call i32 @unittest(i32 %7, i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str, i64 0, i64 0))
  %9 = load %struct.ni_route_tables*, %struct.ni_route_tables** %1, align 8
  %10 = getelementptr inbounds [2 x i32], [2 x i32]* %2, i64 0, i64 0
  %11 = call i32 @ni_get_valid_routes(%struct.ni_route_tables* %9, i32 1, i32* %10)
  %12 = icmp eq i32 %11, 1
  %13 = zext i1 %12 to i32
  %14 = call i32 @unittest(i32 %13, i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str.1, i64 0, i64 0))
  %15 = getelementptr inbounds [2 x i32], [2 x i32]* %2, i64 0, i64 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @O(i32 1)
  %18 = icmp eq i32 %16, %17
  %19 = zext i1 %18 to i32
  %20 = call i32 @unittest(i32 %19, i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str.2, i64 0, i64 0))
  %21 = getelementptr inbounds [2 x i32], [2 x i32]* %2, i64 0, i64 1
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @O(i32 0)
  %24 = icmp eq i32 %22, %23
  %25 = zext i1 %24 to i32
  %26 = call i32 @unittest(i32 %25, i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str.3, i64 0, i64 0))
  ret void
}

declare dso_local i32 @init_pci_fake(...) #1

declare dso_local i32 @unittest(i32, i8*) #1

declare dso_local i32 @ni_get_valid_routes(%struct.ni_route_tables*, i32, i32*) #1

declare dso_local i32 @O(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
